--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
+    "@mui/x-data-grid": "^6.16.3",
+    "@mui/x-date-pickers": "^6.16.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,11 +18,15 @@
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "antd": "^5.10.2",
+    "date-fns-jalali": "^2.13.0-0",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "stylis": "^4.3.0",
+    "stylis-plugin-rtl": "^2.1.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/stylis": "^4.2.2",
     "tailwindcss": "^3.3.3"
   }
 }
