--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-fast-marquee": "^1.6.2",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "styli": "^0.1.0",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
     "typescript": "^4.9.5",
