--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "antd": "^5.10.2",
+    "axios": "^1.6.0",
     "date-fns-jalali": "^2.13.0-0",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
