--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-fast-marquee": "^1.6.2",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.0",
     "styli": "^0.1.0",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
@@ -57,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/stylis": "^4.2.2",
     "tailwindcss": "^3.3.3"
   }
