--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@types/react-dom": "^18.2.14",
     "antd": "^5.10.2",
     "axios": "^1.6.0",
+    "compressorjs": "^1.2.1",
     "date-fns-jalali": "^2.13.0-0",
     "dayjs": "^1.11.10",
+    "jalaliday": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
