--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "antd": "^5.10.2",
+    "antd-jalali": "^1.0.3",
     "axios": "^1.6.0",
     "compressorjs": "^1.2.1",
     "date-fns-jalali": "^2.13.0-0",
@@ -26,8 +27,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
+    "react-highlight-words": "^0.20.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.15",
     "styled-components": "^6.1.0",
     "styli": "^0.1.0",
     "stylis": "^4.3.0",
@@ -61,6 +64,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-highlight-words": "^0.16.6",
     "@types/stylis": "^4.2.2",
     "tailwindcss": "^3.3.3"
   }
